added podcast and episode controllers with api documentation
