# app/Http/Requests/StorePodcastRequest.php
@@ -23,7 +23,10 @@ class StorePodcastRequest extends FormRequest
     {
         return [
 
-            
+            "titre"=>"required|string|max:255",
+            "description"=>"required|string|max:255",
+            "category"=>"required|string|max:255",
+            "image_url"=> "required|string|max:255"
             
         ];
     }
