# app/Http/Requests/UpdatePodcastRequest.php
@@ -11,7 +11,7 @@ class UpdatePodcastRequest extends FormRequest
      */
     public function authorize(): bool
     {
-        return false;
+        return true;
     }
 
     /**
@@ -22,7 +22,10 @@ class UpdatePodcastRequest extends FormRequest
     public function rules(): array
     {
         return [
-            //
+            "titre"=>"required|string|max:255",
+            "description"=>"required|string|max:255",
+            "category"=>"required|string|max:255",
+            "image_url"=> "required|string|max:255"
         ];
     }
 }
